# password-dice

./: README.md  pyproject.toml
password_dice/: main.py
password_dice/data/: __init__.py  load_word_list_data.py
password_dice/models/: __init__.py  passphrase_model.py
password_dice/services/: __init__.py  dice_service.py
